--- a/szabalyozok/templates/szabalyozok/riport_layout.html
+++ b/szabalyozok/templates/szabalyozok/riport_layout.html
@@ -71,6 +71,8 @@
                         <li><a href="{% url 'riport_szabmunkak_api' %}">Szabályozó munkák riport</a></li>
                         <li><a href="{% url 'riport_muszermunkak_api' %}">Műszer munkák riport</a></li>
                         <li role="separator" class="divider"></li>
+                        <li><a href="{% url 'riport_szabingatlan' %}">Szab. ingatlan riport</a></li>
+                        <li role="separator" class="divider"></li>
                         <li><a href="{% url 'riport_dokumentumfilter' %}">Dokumentumok riport</a></li>
                     </ul>
                 </li>
