--- a/szabalyozok/templates/szabalyozok/szabingatlan_edit.html
+++ b/szabalyozok/templates/szabalyozok/szabingatlan_edit.html
@@ -3,12 +3,22 @@
 
 {% block content %}
 
-<h3 style="margin-left:40px;">Műszer munka szerkesztés</h3><br>
+<h3 style="margin-left:40px;">Szabályozó ingatlan szerkesztés</h3><br>
+
+<div style="margin-left:40px;" class="col-md-4">
     {% load bootstrap3 %}
     <form method="POST" class="form-horizontal" role="form">
         {% csrf_token %}
         {% bootstrap_form form layout="horizontal" %}
         <button type="submit" class="save btn btn-primary">Módosít</button>
     </form>
+</div>
+{% endblock %}
 
+{% block scripts %}
+<script>
+$( document ).ready(function() {
+  $("#id_szabalyozo").attr('style', 'overflow: auto; width : 400px; max-height:250px;');
+});
+</script>
 {% endblock %}
