--- a/szabalyozok/templates/szabalyozok/szabtart_show.html
+++ b/szabalyozok/templates/szabalyozok/szabtart_show.html
@@ -8,6 +8,7 @@
     {% if user.is_authenticated %}
         <li role="presentation"><a href="{% url 'szabmunka_show' pk=szabid %}">Szab. munkavégzés</a></li>
     {% endif %}
+    <li role="presentation"><a href="{% url 'szabingatlan_show' pk=szabid %}">Ingatlan</a></li>
 </ul>
 
 <div class="col-md-12">
